--- a/export/views/work/summary/index.html
+++ b/export/views/work/summary/index.html
@@ -320,6 +320,13 @@
           <li>对外活动</li></ul></li>
           </ul>
 
+          最后，铭记，并付诸努力！
+
+          <blockquote>
+            <div>高效工作，快乐生活</div>
+            <div>激情是一种生活态度，也是一种工作态度</div>
+          </blockquote>
+
         </section>
 
         <!-- <aside id="sidebar">
