--- a/export/views/work/summary/index.html
+++ b/export/views/work/summary/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="../../../css/common/font_92a0e396.css" type="text/css">
-    <link rel="stylesheet" href="../../../css/common/style_7b99efd2.css" media="screen" type="text/css">
+    <link rel="stylesheet" href="../../../css/common/style_1f6aed7d.css" media="screen" type="text/css">
     <link rel="stylesheet" href="../../../css/common/print_9fc78c3d.css" media="print" type="text/css">
-
+    
 
     <title>ShellHong's Blog</title>
     <style media="screen">
@@ -35,297 +35,230 @@
       <div class="inner clearfix">
 
         <section id="main-content"><!--内容主体-->
-          <h1>2017年终总结</h1>
+          
+<h1>2017年终总结</h1>
 
-          <blockquote>
-            <div>时光荏苒，一年飞逝</div>
-            <div>值此之际，好坏自知，一切如字</div>
-          </blockquote>
+<blockquote>
+  <div>时光荏苒，一年飞逝</div>
+  <div>值此之际，好坏自知，一切如字</div>
+</blockquote>
 
-          <h2>个人</h2>
+<h2>个人</h2>
 
-          <h3>对技术负责</h3>
+<h3>对技术负责</h3>
 
-          <p>单纯从技术层面来讲，精力的分配大致是</p>
+<p>单纯从技术层面来讲，精力的分配大致是</p>
 
-          <ul>
-          <li>20%的业务实现</li>
-          <li>30%的组件输出</li>
-          <li>20%的架构与方案输出</li>
-          <li>30%的各种问题处理</li>
-          </ul>
+<ul>
+<li>20%的业务实现</li>
+<li>30%的组件输出</li>
+<li>20%的架构与方案输出</li>
+<li>30%的各种问题处理</li>
+</ul>
 
-          <p>这一年的时间里，其实于我个人而言，努力的方向主要是以下两点</p>
+<p>这一年的时间里，其实于我个人而言，努力的方向主要是以下两点</p>
 
-          <ul>
-          <li>业务调整
-          <div>不再花费大量的精力投入具体的业务实现，而是</div>
+<ul>
+<li>业务调整
+<div>不再花费大量的精力投入具体的业务实现，而是</div>
 
-          <ul><li>推动业务负责人的落地和备份</li>
-          <li>关注重要和高频业务</li>
-          <li>适时地在项目间游走与参与，提高项目架构与封装，补充紧急项目人力空缺，了解必要的业务逻辑</li></ul></li>
-          <li>技术加强
+<ul><li>推动业务负责人的落地和备份</li>
+<li>关注重要和高频业务</li>
+<li>适时地在项目间游走与参与，提高项目架构与封装，补充紧急项目人力空缺，了解必要的业务逻辑</li></ul></li>
+<li>技术加强
 
-          <ul><li>加强组件封装与流程封装
-            <div>
-          <div>推动内部仓库使用，增加重要、高频功能与流程的封装，增加组件代码review，减少业务代码review。</div>
-          <p>业务代码质量通过3各方面来保障，业务负责人review、测试环节检测、skynet平台监控。当然，组件和封装的加强，本身也是业务实现的重要保障和提升。</p>
-          </div>
-          </li>
-          <li>加强可配置化实现
-            <p>
-          对部分高频的业务，推动采用自动化与可配置化方式落地，抽离开发与测试环节。提供丰富的工具与文档配套，辅助运营、测试和第三方cp完成整个流程，减少沟通成本。
-          </p>
-          </li>
-          <li>关注质量
-            <div>
-          <div>项目质量全流程、整闭环跟进，不只是到测试环节，不只是解决redmine bug，线上的异常同样囊括在内。</div>
-          增加线上监控，增加线上项目性能与异常日报邮件，并限期定位与解决，增加前端或与前端相关（客户的或后台）的线上埋点异常、功能异常等的定位渠道。
-          </div></li></ul></li>
-          </ul>
+<ul><li>加强组件封装与流程封装
+  <div>
+<div>推动内部仓库使用，增加重要、高频功能与流程的封装，增加组件代码review，减少业务代码review。</div>
+<p>业务代码质量通过3各方面来保障，业务负责人review、测试环节检测、skynet平台监控。当然，组件和封装的加强，本身也是业务实现的重要保障和提升。</p>
+</div>
+</li>
+<li>加强可配置化实现
+  <p>
+对部分高频的业务，推动采用自动化与可配置化方式落地，抽离开发与测试环节。提供丰富的工具与文档配套，辅助运营、测试和第三方cp完成整个流程，减少沟通成本。
+</p>
+</li>
+<li>关注质量
+  <div>
+<div>项目质量全流程、整闭环跟进，不只是到测试环节，不只是解决redmine bug，线上的异常同样囊括在内。</div>
+增加线上监控，增加线上项目性能与异常日报邮件，并限期定位与解决，增加前端或与前端相关（客户的或后台）的线上埋点异常、功能异常等的定位渠道。
+</div></li></ul></li>
+</ul>
 
-          <h3>对团队负责</h3>
+<h3>对团队负责</h3>
 
-          <ul>
-          <li>分享
-          <ul><li>参与新员工培训，获优秀讲师</li>
-          <li>参与多次部门分享 </li>
-          <li>组织和推动组内多次分享和文档输出</li></ul></li>
-          <li>知心
-          <ul><li>定期组员沟通，了解想法，解决困难</li>
-          <li>重要事项辅助与建议（评级建议、职业规划、提升的方向等）</li></ul></li>
-          <li>协作
-          <ul><li>项目排期与任务划分</li>
-          <li>人力协调与安排</li>
-          <li>跨部门协作难题沟通与解决</li>
-          <li>组员沟通与协作机制促进</li></ul></li>
-          <li>结果达成
-          <ul><li>风险预估与难题解决</li>
-          <li>需求评审、建议、拆解</li>
-          <li>线上指标监控</li></ul></li>
-          </ul>
+<ul>
+<li>分享
+<ul><li>参与新员工培训，获优秀讲师</li>
+<li>参与多次部门分享 </li>
+<li>组织和推动组内多次分享和文档输出</li></ul></li>
+<li>知心
+<ul><li>定期组员沟通，了解想法，解决困难</li>
+<li>重要事项辅助与建议（评级建议、职业规划、提升的方向等）</li></ul></li>
+<li>协作
+<ul><li>项目排期与任务划分</li>
+<li>人力协调与安排</li>
+<li>跨部门协作难题沟通与解决</li>
+<li>组员沟通与协作机制促进</li></ul></li>
+<li>结果达成
+<ul><li>风险预估与难题解决</li>
+<li>需求评审、建议、拆解</li>
+<li>线上指标监控</li></ul></li>
+</ul>
 
-          <h3>对公司负责</h3>
+<h3>对公司负责</h3>
 
-          <ul>
-          <li>评级
-          <ul>
-          <li>积极参与标准制定和评委工作</li></ul></li>
-          <li>技术支撑
-          <ul><li>校招笔试题输出</li>
-          <li>跨部门方案输出</li>
-          <li>跨部门技术问题解决支撑</li>
-          <li>跨部门招聘支撑</li>
-          <li>跨部门项目开发支撑</li></ul></li>
-          </ul>
+<ul>
+<li>评级
+<ul>
+<li>积极参与标准制定和评委工作</li></ul></li>
+<li>技术支撑
+<ul><li>校招笔试题输出</li>
+<li>跨部门方案输出</li>
+<li>跨部门技术问题解决支撑</li>
+<li>跨部门招聘支撑</li>
+<li>跨部门项目开发支撑</li></ul></li>
+</ul>
 
-          <h3>对自己负责</h3>
+<h3>对自己负责</h3>
 
-          <ul>
-          <li>
-            <div>阅读</div>
-          生命不止，阅读不息，这在我看来，是突破和提升自己的一个重要的方式。
-          <div>今年和往年相比，阅读量还是有所提升的，也略有所感。涉及的内容有点杂，比例是否正确，尚待考量。</div>
-          </li>
-          <li>
-            <div>众师</div>
-          和有意思的人一起，是可以学习到东西的。观察、交流->思考->学习->扩大圈子，这是一个良性的闭环。
-          <div>略有所感，也在尝试改善一些自身的劣根性，希望朝着更好的方式去拓展。改变总是不舒服的，有行动和想法是一个好的开始，虽然目前效果微弱，需要再接再厉。</div>
-          </li>
-          <li><div>博客</div>
-          29岁生日前后，除了感慨：我X，又老了一岁！同时也决定搞一些的事情，于是有了自己的博客，并到目前为止，零零散散持续的更新着。</li>
-          </ul>
+<ul>
+<li>
+  <div>阅读</div>
+生命不止，阅读不息，这在我看来，是突破和提升自己的一个重要的方式。
+<div>今年和往年相比，阅读量还是有所提升的，也略有所感。涉及的内容有点杂，比例是否正确，尚待考量。</div>
+</li>
+<li>
+  <div>众师</div>
+和有意思的人一起，是可以学习到东西的。观察、交流->思考->学习->扩大圈子，这是一个良性的闭环。
+<div>略有所感，也在尝试改善一些自身的劣根性，希望朝着更好的方式去拓展。改变总是不舒服的，有行动和想法是一个好的开始，虽然目前效果微弱，需要再接再厉。</div>
+</li>
+<li><div>博客</div>
+29岁生日前后，除了感慨：我X，又老了一岁！同时也决定搞一些的事情，于是有了自己的博客，并到目前为止，零零散散持续的更新着。</li>
+</ul>
 
-          <h3>总结</h3>
-          总的来说，基本是朝着以下几点努力
-          <ul>
-          <li>做一个有技术追求的开发</li>
-          <li>做一个高效的工作者</li>
-          <li>做一个能推动团队前进的管理者</li>
-          <li>做一个有想法的自己</li>
-          </ul>
-          <div>有进步也有遗憾，不足的地方有很多，性格使然，能力使然，需再接再厉。</div>
+<h3>总结</h3>
+总的来说，基本是朝着以下几点努力
+<ul>
+<li>做一个有技术追求的开发</li>
+<li>做一个高效的工作者</li>
+<li>做一个能推动团队前进的管理者</li>
+<li>做一个有想法的自己</li>
+</ul>
+<div>有进步也有遗憾，不足的地方有很多，性格使然，能力使然，需再接再厉。</div>
 
-          <h2>团队</h2>
+<h2>团队</h2>
 
-          <h3>做好前端本分</h3>
+<h3>做好前端本分</h3>
 
-          <ul>
-          <li>一如既往支撑部门前端项目</li>
-          <li>一往无前引进合适技术并落地</li>
-          <li>在效率和质量方面做了诸多尝试，成效显著</li>
-          </ul>
+<ul>
+<li>一如既往支撑部门前端项目</li>
+<li>一往无前引进合适技术并落地</li>
+<li>在效率和质量方面做了诸多尝试，成效显著</li>
+</ul>
 
-          <h3>列举典型</h3>
+<h3>列举典型</h3>
 
-          <ul>
-          <h3>
-            deeplink活动</h3>
+<ul>
+<h3>
+  deeplink活动</h3>
 
-          <div>
-            <div>一系列高频、简单、规律性强的活动页面。</div>
-          <div>不能由cp实现（虽然，他们老是提各种定制化需求），毕竟甲方是上帝，而且沟通成本很高，联调和技术支撑成本也不低，还需要暴露内部接口。这些都不是一个有追求的人所能接受的，虽然偶尔还是会有这样的诉求。
-          </div>也不能每次都为cp开发一套页面，然后发布上线，虽然工作量不多，虽然cp是上帝，毕竟三天两头的就来个页面（现在连公司内部一些其它部门也有这种诉求），频繁得很。</div>
+<div>
+  <div>一系列高频、简单、规律性强的活动页面。</div>
+<div>不能由cp实现（虽然，他们老是提各种定制化需求），毕竟甲方是上帝，而且沟通成本很高，联调和技术支撑成本也不低，还需要暴露内部接口。这些都不是一个有追求的人所能接受的，虽然偶尔还是会有这样的诉求。
+</div>也不能每次都为cp开发一套页面，然后发布上线，虽然工作量不多，虽然cp是上帝，毕竟三天两头的就来个页面（现在连公司内部一些其它部门也有这种诉求），频繁得很。</div>
 
-          <div>so...</div>
+<div>so...</div>
 
-          <ul><li>给出一套标准</li>
-          <li>给出一个架构</li>
-          <li>提供一套可配置化生态（界面生成平台+代码生成工具+简单文档）</li>
-          <li>提供一套自动化辅助工具（流程测试等工具+简单文档）</li></ul>
-
-
-          <div>较好的资源整合、迭代计划，保证了上面计划的逐步快速落地，并且在这个过程中，做到了完全不影响此类活动的商务侧需求如期上线。</div>
-
-          <div>最后，较好实现了以下几项目标</div>
-
-          <ul>
-            <li>内部接口和逻辑对cp透明</li>
-            <li>活动配置上线，无需测试开发参与</li>
-            <li>利用第三方部门资源，推动计划快速落地</li>
-            <li>较好的分层设计，推动项目良性发展</li>
-          </ul>
-          <p><a target='_blank' href="http://blog.shellhong.com/export/views/work/activity/index.html">点击了解更多</a></p>
-
-          <h3>联合活动</h3>
-          <p>和前面的deeplink活动对比，联合活动，算是比较复杂的，而且定制化层度更高，今天玩打飞机，明天是切水果，后天接蘑菇。只有你做不到的，没有运营想不到的(泪奔)...</p>
-
-          <div>第一步，优化人员配比，保障新的类型活动切入成功（之前都是转盘、翻牌等的css3类型活动，突然要切换到小游戏。新的技术方案、更高的复杂度、较短的开发时间都是不小的挑战）。</div>
-
-          <div>成功切入，并基本稳定之后，开始搞事情：</div>
-
-          <ul>
-            <li>活动项目工程化优化，保障后续活动零工作量前端环境搭建</li>
-            <li>方法和流程封装，保障效能</li>
-            <li>多次的性能调优尝试
-              <ul>
-                <li>PWA的service worker方案试水（但是由于公司webview漏洞，不得不撤回）</li>
-                <li>定制化自己的简化版游戏引擎</li>
-              </ul>
-            </li>
-          </ul>
-          <p><a target='_blank' href="http://blog.shellhong.com/export/views/work/re-activity/index.html">点击了解更多</a></p>
-
-          <h3>数据平台</h3>
-            <div>后台管理系统，是一个常态、高频的需求。而这类项目的可配置化实现，是一个美好的愿望，由来已久。</div>
-            <p>今年，这个愿望终于在组内落地，开发出了后台管理系统配置平台。</p>
-
-            <ul>
-              <li>基于第三方Element UI组件库，实现常规组件高可用</li>
-              <li>基于内部仓库的核心模块拆分，实现项目依赖可更新</li>
-              <li>可配置，保障了较高的效能</li>
-              <li>2个项目（内部数据平台和积分管理模块）使用到该架构，以后会更多</li>
-            </ul>
-          <p><a target='_blank' href="http://blog.shellhong.com/resources/通用后台模板系统.pptx">点击了解更多</a></p>
-
-          <p><h3>监控平台</h3>
-          skynet监控平台的开发和上线，让我们有渠道去更加关注线上（定位线上问题、查看线上性能和异常、每日邮件汇总前端项目相关数据等）。</p>
-
-          <ul><li>埋点异常定位
-          <div>当运营看了数据，急匆匆找过来说，昨天常规活动的push点击量60万，为什么页面曝光和点击量不到20万。</div>
-          <div>但是这个活动已经上线一百年了，近期没改过，之前一直好好的，然后你懵逼了。</div>
-          <div>这种情况你还不能找客户端，虽然push是客户端范围的，但是页面曝光和下载是前端的，客户端很难定位出来，你还是一脸懵逼。</div>
-          <div>然后，去测试环境，又发现不可重现。</div>
-          <div>这种情况，要是在以前，简直就是无解了。</div>
-          <div>最后，到skynet监控平台上一查，这个活动由于客户端某新版本改动导致了报错达十几万个，而就是这个报错，导致了上面的问题。</div></li>
-          <li>复杂的线上，复杂的问题
-          <ul><li>没有监控，你不会想象得到，你一直信赖的代码在线上会不断报错，而且在测试环境，同一固件、同一app下，就是不可重现</li>
-          <li>没有监控，你不会想象得到，你所信赖的大数据js加载失败次数那么高</li>
-          <li>没有监控，你不会想象得到，你所信赖的客户端，各个接口会时不时报一下错</li>
-          <li>没有skynet，当后台找过来说，你的接口调用有问题，你都无力反驳，无从下手</li></ul></li></ul>
-
-          <p>所以，依托skynet平台，2017年，我们主要做了</p>
-
-          <ul><li>解决每日性能和异常邮件中，数量级达到100个以上的异常（该解决的解决，该反馈的反馈）</li>
-          <li>定位测试环境中不可重现的问题，并做处理</li>
-          <li>定位埋点数据异常，并反馈</li>
-          <li>发现性能不佳的项目，并优化</li>
-          <li>作为工作质量数据的体现之一</li></ul>
-          </ul>
-          <p><a target='_blank' href="https://docs.google.com/presentation/d/1jww846M3lZoPTb5OOOINMcMEv6UZfPWkNvBLye5bS8g/edit#slide=id.g2398ef0b51_0_0">点击了解更多</a></p>
+<ul><li>给出一套标准</li>
+<li>给出一个架构</li>
+<li>提供一套可配置化生态（界面生成平台+代码生成工具+简单文档）</li>
+<li>提供一套自动化辅助工具（流程测试等工具+简单文档）</li></ul>
 
 
-          <h3>总结</h3>
-          <div>上面列举了几个例子，当然还有一些没提及，例如内部仓库和前端wiki文档的完善，这些和往年比都算是一种进步。</div>
-          特别是这些有意义的事情，是我们在不影响任何需求排期的情况下做出来的，是可以有一种淡淡的自豪感的。
+<div>较好的资源整合、迭代计划，保证了上面计划的逐步快速落地，并且在这个过程中，做到了完全不影响此类活动的商务侧需求如期上线。</div>
 
-          <h2>目标</h2>
+<div>最后，较好实现了以下几项目标</div>
 
-          <div>今年即将过去，未来的路该怎么走，方向何在！没办法一眼望穿，先根据现有不足，定个基调，且行且变。</div>
+<ul>
+  <li>内部接口和逻辑对cp透明</li>
+  <li>活动配置上线，无需测试开发参与</li>
+  <li>利用第三方部门资源，推动计划快速落地</li>
+  <li>较好的分层设计，推动项目良性发展</li>
+</ul>
+<p><a target='_blank' href="http://blog.shellhong.com/export/views/work/activity/index.html">点击了解更多</a></p>
 
-          <h3>个人</h3>
-          <ul>
-            <li>2017年，一些好的想法，好的改变，还没走完，坚持走下去</li>
-            <li>一定数量的开源项目、方案输出</li>
-            <li>一定数量的部门、公司级别分享</li>
-            <li>一定数量的源码阅读量</li>
-            <li>一定数量的技术和其它文章的阅读量</li>
-            <li>圈子扩大</li>
-            <li>增加知识付费投入</li>
-          </ul>
+<h3>联合活动</h3>
+<p>和前面的deeplink活动对比，联合活动，算是比较复杂的，而且定制化层度更高，今天玩打飞机，明天是切水果，后天接蘑菇。只有你做不到的，没有运营想不到的(泪奔)...</p>
 
-          <h3>团队</h3>
+<div>第一步，优化人员配比，保障新的类型活动切入成功（之前都是转盘、翻牌等的css3类型活动，突然要切换到小游戏。新的技术方案、更高的复杂度、较短的开发时间都是不小的挑战）。</div>
 
-          <h4>项目</h4>
+<div>成功切入，并基本稳定之后，开始搞事情：</div>
 
-          <ul>
-          <li>效能提升
-          <ul><li>完善和持续推进模块、流程封装与分层架构</li>
-          <li>保证较高的文档覆盖</li>
-          <li>难点项目切入门槛降低和效率提升</li>
-          <li>开发协作优化（较细粒度的分模块并行开发、彼此项目了解度提升等）</li></ul></li>
-          <li>技术突破
-          <ul>
-            <li>H5体验提升，例如
-              <ul><li>PWA部分特性落地（如果之前的异常问题解决并已覆盖的化）</li>
-              <li>直达服务改造落地</li>
-              <li>活动形式突破预研（SVG动画、陀螺仪、WebGL等）</li>
-              <li>重要项目性能指标提升（上线前性能报告，上线后线上监控）</li></ul>
-            </li>
-          </ul>
-          </li>
-          <li>对外输出
-          <ul><li>一次或以上公司级别项目奖项获得</li></ul></li>
-          </ul>
+<ul>
+  <li>活动项目工程化优化，保障后续活动零工作量前端环境搭建</li>
+  <li>方法和流程封装，保障效能</li>
+  <li>多次的性能调优尝试
+    <ul>
+      <li>PWA的service worker方案试水（但是由于公司webview漏洞，不得不撤回）</li>
+      <li>定制化自己的简化版游戏引擎</li>
+    </ul>
+  </li>
+</ul>
+<p><a target='_blank' href="http://blog.shellhong.com/export/views/work/re-activity/index.html">点击了解更多</a></p>
 
-          <h4>氛围</h4>
+<h3>数据平台</h3>
+  <div>后台管理系统，是一个常态、高频的需求。而这类项目的可配置化实现，是一个美好的愿望，由来已久。</div>
+  <p>今年，这个愿望终于在组内落地，开发出了后台管理系统配置平台。</p>
 
-          <ul>
-          <li>寻找鲶鱼，步骤如下
-          <ul><li>自己充当</li>
-          <li>推动和培养合适的人员</li>
-          <li>招聘符合的人员</li></ul></li>
-          <li>增加设定
-          <ul><li>除了产品预期，增加技术和团队预期，例如
-          <ul><li>可复用或借鉴于其它项目</li>
-          <li>具备可分享输出</li></ul></li>
-          <li>增加明确的技术性任务列表，例如
-          <ul><li>预研某技术，并分享</li>
-          <li>封装某功能、模块、流程，并输出到内部仓库</li>
-          <li>团队代码review，并具正面意义</li>
-          <li>工程化加强，并输出分享或脚手架工具</li></ul></li></ul></li>
-          <li>技术交流
-          <ul><li>基础要求
-          <ul><li>新型项目，必须对应一次分享或交流</li>
-          <li>内部仓库优秀实现分享与交流</li></ul></li>
-          <li>频率
-          <ul><li>一个月一次</li>
-          <li>每人至少一次</li>
-          <li>部门级两个月至少一次</li>
-          <li>跨部门级每年2次以上</li></ul></li></ul></li>
-          <li>增加团队性质活动频率，例如
-          <ul><li>一起参与分享、讲座、课程等</li>
-          <li>头脑风暴</li>
-          <li>常规交流</li>
-          <li>对外活动</li></ul></li>
-          </ul>
+  <ul>
+    <li>基于第三方Element UI组件库，实现常规组件高可用</li>
+    <li>基于内部仓库的核心模块拆分，实现项目依赖可更新</li>
+    <li>可配置，保障了较高的效能</li>
+    <li>2个项目（内部数据平台和积分管理模块）使用到该架构，以后会更多</li>
+  </ul>
+<p><a target='_blank' href="http://blog.shellhong.com/resources/通用后台模板系统.pptx">点击了解更多</a></p>
 
-          最后，铭记，并付诸努力！
+<p><h3>监控平台</h3>
+skynet监控平台的开发和上线，让我们有渠道去更加关注线上（定位线上问题、查看线上性能和异常、每日邮件汇总前端项目相关数据等）。</p>
 
-          <blockquote>
-            <div>高效工作，快乐生活</div>
-            <div>激情是一种生活态度，也是一种工作态度</div>
-          </blockquote>
+<ul><li>埋点异常定位
+<div>当运营看了数据，急匆匆找过来说，昨天常规活动的push点击量60万，为什么页面曝光和点击量不到20万。</div>
+<div>但是这个活动已经上线一百年了，近期没改过，之前一直好好的，然后你懵逼了。</div>
+<div>这种情况你还不能找客户端，虽然push是客户端范围的，但是页面曝光和下载是前端的，客户端很难定位出来，你还是一脸懵逼。</div>
+<div>然后，去测试环境，又发现不可重现。</div>
+<div>这种情况，要是在以前，简直就是无解了。</div>
+<div>最后，到skynet监控平台上一查，这个活动由于客户端某新版本改动导致了报错达十几万个，而就是这个报错，导致了上面的问题。</div></li>
+<li>复杂的线上，复杂的问题
+<ul><li>没有监控，你不会想象得到，你一直信赖的代码在线上会不断报错，而且在测试环境，同一固件、同一app下，就是不可重现</li>
+<li>没有监控，你不会想象得到，你所信赖的大数据js加载失败次数那么高</li>
+<li>没有监控，你不会想象得到，你所信赖的客户端，各个接口会时不时报一下错</li>
+<li>没有skynet，当后台找过来说，你的接口调用有问题，你都无力反驳，无从下手</li></ul></li></ul>
+
+<p>所以，依托skynet平台，2017年，我们主要做了</p>
+
+<ul><li>解决每日性能和异常邮件中，数量级达到100个以上的异常（该解决的解决，该反馈的反馈）</li>
+<li>定位测试环境中不可重现的问题，并做处理</li>
+<li>定位埋点数据异常，并反馈</li>
+<li>发现性能不佳的项目，并优化</li>
+<li>作为工作质量数据的体现之一</li></ul>
+</ul>
+<p><a target='_blank' href="https://docs.google.com/presentation/d/1jww846M3lZoPTb5OOOINMcMEv6UZfPWkNvBLye5bS8g/edit#slide=id.g2398ef0b51_0_0">点击了解更多</a></p>
+
+
+<h3>总结</h3>
+<div>上面列举了几个例子，当然还有一些没提及，例如内部仓库和前端wiki文档的完善，这些和往年比都算是一种进步。</div>
+特别是这些有意义的事情，是我们在不影响任何需求排期的情况下做出来的，是可以有一种淡淡的自豪感的。
+
+<h2>目标</h2>
+
+<div>
+  <img src="../../../images/work/summary/2018前端工作计划_a28adb72.png" alt="">
+</div>
+
+<blockquote>
+  <div>高效工作，快乐生活</div>
+</blockquote>
 
         </section>
 
@@ -336,7 +269,7 @@
 
       </div>
     </div>
-
+    
 
   </body>
 </html>
