--- a/export/views/work/carousel/index.html
+++ b/export/views/work/carousel/index.html
@@ -89,6 +89,7 @@
 <li><a href="../../../../effect/carousel/index-base.html">base模式</a></li>
 <li><a href="../../../../effect/carousel/index-scale.html">scale模式</a></li>
 <li><a href="../../../../effect/carousel/index-parallel.html">parallel模式</a></li>
+<li><a href="../../../../effect/carousel/index-parallel-simple.html">parallel-simple模式</a></li>
 </ul>
 
 <h2>github项目</h2>
