--- a/export/views/work/monitor/index.html
+++ b/export/views/work/monitor/index.html
@@ -148,8 +148,8 @@
 
 <div>总的来说，优秀的框架或库总有那么几个，选一个适合自己的，适合项目的便可。</div>
 
-<div>后端服务大致结构如下图
-<img src="../../../images/work/monitor/i_243539d8.png" alt="monitor image" title="" /></div>
+<div>后端服务大致结构如下图</div>
+<img src="../../../images/work/monitor/i_243539d8.png" alt="monitor image" title="" />
 
 <div>其中的sinopia公共模块，主要是提取了三个后端服务模块的公共的数据库操作库以及工具库，放置于内部仓库中，好处不言而喻。
 而其他部分，将在下文一一讲解。</div>
