--- a/src/views/work/monitor/index.html
+++ b/src/views/work/monitor/index.html
@@ -169,7 +169,7 @@
 
 <h4>manage</h4>
 
-<div>管理后台就比较简单了，主要是堆代码，前端是使用<code>vue</code>全家桶现实的，后端还是<code>hapi</code>，然后使用<code>hapi</code>自带的<code>state management</code>做好简单的登录和访问授权即可。</div>
+<div>管理后台就比较简单了，主要是堆代码，前端是使用<code>vue</code>全家桶（写的比较早，so，版本不是很新）现实的，后端还是<code>hapi</code>，然后使用<code>hapi</code>自带的<code>state management</code>做好简单的登录和访问授权即可。</div>
 
 <h4>高可用</h4>
 
@@ -195,7 +195,17 @@
 
 <h3>总结</h3>
 
-<div>说了这么多，不知道大家有什么感觉，笔者觉得这样一个平台，大家是可以挤点时间尝试一下的：</div>
+<div>
+  源码
+</div>
+<ul>
+<li><a target='_blank' href='https://github.com/shellhong6/skynet-server'>skynet-server</a></li>
+<li><a target='_blank' href='https://github.com/shellhong6/skynet-manage'>skynet-manage</a></li>
+<li><a target='_blank' href='https://github.com/shellhong6/skynet-schedule'>skynet-schedule</a></li>
+<li><a target='_blank' href='https://github.com/shellhong6/skynet-db'>skynet-db</a></li>
+<li><a target='_blank' href='https://github.com/shellhong6/skynet-utils'>skynet-utils</a></li>
+</ul>
+<div>说了这么多，不知道大家有什么感觉，笔者觉得这样一个平台，好处多多，大家是可以挤点时间尝试一下的（毕竟笔者也是利用空余时间进行开发的，做人要有自信，哈哈哈...）：</div>
 
 <ul>
 <li>不要怕出错，毕竟即使出错了，也不会影响正常的线上业务</li>
