--- a/export/views/work/monitor/index.html
+++ b/export/views/work/monitor/index.html
@@ -247,7 +247,7 @@
 <li>此处省略一万个优点...</li>
 </ul>
 
-<div>差不多该讲的都讲了，很多细节这里没办法涉及到，感谢各位捧场！</div>
+<div>就讲这么多吧，很多细节这里没办法涉及到，感谢各位捧场！</div>
 
         </section>
 
