--- a/export/views/work/dependencies/index.html
+++ b/export/views/work/dependencies/index.html
@@ -67,7 +67,8 @@
 <li>非附属关系，不建议使用该配置项（例如：某个包，其应用范围很广或独立性强，那么就不适宜如此使用）</li>
 </ul>
 
-<p>图片1</p>
+<p><img src="../../../images/work/dependencies/a_2b3b3588.png" alt="流程一" title="" /></p>
+
 
 <h2>版本号</h2>
 
@@ -84,7 +85,7 @@
 <li><p>其他从字面意思理解</p>
 
 <blockquote>
-  <p>、>=、&lt;、&lt;=、*、||等</p>
+  <p>&gt;、&gt;=、&lt;、&lt;=、*、||&nbsp;&nbsp;等</p>
 </blockquote></li>
 </ul>
 
