--- a/export/views/remark/saying/index.html
+++ b/export/views/remark/saying/index.html
@@ -65,6 +65,20 @@
   高效工作，愉快生活！</code>
     </pre>
     <p class='time'>2018-3-15</p>
+    <pre>
+      <code>
+  关于内部仓库包依赖链处理规范:
+  假设内部仓库有两个包，A依赖B
+  规则：
+  1.尽量减少把B代码打包到A中，而是使用require引入或webpack externals配置
+  2.dependencies/peerDependencies中B的版本号用'^'开头
+  3.B包改动时，兼容性改动升级小版本，破坏性改动升级大版本（例如：B的此次改动，导致依赖它的A需要升级，那么B的版本号应该由1.x升级为2.x）
+  目的：
+  1.减少重复依赖导致最终构建代码冗余
+  2.减少升级依赖（避免：B做了兼容性改动后，所有依赖于它的内部仓库公共包都需要做相应升级，而是把这一步移至业务级项目）
+      </code>
+    </pre>
+    <p class='time'>2018-3-21</p>
 
         </section>
 
