--- a/export/views/work/dependencies/index.html
+++ b/export/views/work/dependencies/index.html
@@ -70,7 +70,7 @@
 <li>3.0之前的版本，会自动安装该配置项中的包，但是如果同一个包安装了多个不同的版本，则会报错</li>
 <li>3.0以后，只会做警告提示，然后需要自行安装和解决冲突</li>
 <li>主要用在插件的开发中，例如：<code>sass-loader</code>是为<code>webpack</code>开发的加载器，其兼容webpack 2.x到4.x版本，那么便可在该包的<code>peerDependencies</code>配置项中，写入<code>"webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"</code></li>
-<li></li>
+<li>或者希望把依赖包的控制权交给业务</li>
 <li>非附属关系，不建议使用该配置项（例如：某个包，其应用范围很广或独立性强，那么就不适宜如此使用）</li>
 </ul>
 
