--- a/export/views/remark/saying/index.html
+++ b/export/views/remark/saying/index.html
@@ -79,6 +79,15 @@
       </code>
     </pre>
     <p class='time'>2018-3-21</p>
+    <pre>
+      <code>
+  活动2018年方向：
+  在保持业务稳定的情况下，做两点突破
+  1.游戏模块解耦 -> 游戏项目接入与搭建便捷化 -> 实现游戏平台搭建
+  2.新的相关技术（svg动画、3D等）预研，推动游戏模式更新
+      </code>
+    </pre>
+    <p class='time'>2018-3-26</p>
 
         </section>
 
