--- a/src/effect/tree/css/index.css
+++ b/src/effect/tree/css/index.css
@@ -4,14 +4,10 @@ body {
   overflow: hidden;
   margin: 0;
   padding: 0;
-  background: -webkit-linear-gradient(top, #fff5f5, #ffecf0);
-  /* Safari 5.1 - 6.0 */
+  /* background: -webkit-linear-gradient(top, #fff5f5, #ffecf0);
   background: -o-linear-gradient(top, #fff5f5, #ffecf0);
-  /* Opera 11.1 - 12.0 */
   background: -moz-linear-gradient(top, #fff5f5, #ffecf0);
-  /* Firefox 3.6 - 15 */
-  background: linear-gradient(to top, #fff5f5, #ffecf0);
-  /* 标准的语法 */
+  background: linear-gradient(to top, #fff5f5, #ffecf0); */
 }
 
 svg {
