--- a/export/views/remark/saying/index.html
+++ b/export/views/remark/saying/index.html
@@ -68,14 +68,23 @@
     <pre>
       <code>
   关于内部仓库包依赖链处理规范:
-  假设内部仓库有两个包，A依赖B
+
   规则：
-  1.尽量减少把B代码打包到A中，而是使用require引入或webpack externals配置
-  2.dependencies/peerDependencies中B的版本号用'^'开头
-  3.B包改动时，兼容性改动升级小版本，破坏性改动升级大版本（例如：B的此次改动，导致依赖它的A需要升级，那么B的版本号应该由1.x升级为2.x）
+  1.内部仓库，所有的包，如无特殊情况，均采用rollup进行构建
+  2.内部仓库，所有的包package.json中的main字段均指向源码文件
+  3.内部仓库，不同的包之间的依赖引入，都应该通过import，引入对方的源码
+  4.dependencies/peerDependencies中包的版本号用'^'开头
+  5.内部包改动时，兼容性改动升级小版本，破坏性改动升级大版本（例如：B的此次改动，导致依赖它的A需要升级，那么B的版本号应该由1.x.x升级为2.x.x）
   目的：
   1.减少重复依赖导致最终构建代码冗余
   2.减少升级依赖（避免：B做了兼容性改动后，所有依赖于它的内部仓库公共包都需要做相应升级，而是把这一步移至业务级项目）
+  实例：
+  假设内部仓库有两个包，A依赖B，然后业务项目C依赖于A和B
+  一、webpack构建方式引入
+  1.内部包A、B的main都应该指向自己的源码文件（src中的）
+  2.项目C直接通过import引入A和B（import @flyme/A;import @flyme/B;）
+  二、libary(script标签引入或内联)
+  直接复制A包构建后的代码（build中的）到C项目中使用
       </code>
     </pre>
     <p class='time'>2018-3-21</p>
