--- a/kanghuazhen/css/index.css
+++ b/kanghuazhen/css/index.css
@@ -8,9 +8,11 @@ body {
   background: -o-linear-gradient(top, #fff5f5, #ffecf0);
   background: -moz-linear-gradient(top, #fff5f5, #ffecf0);
   background: linear-gradient(to top, #fff5f5, #ffecf0);
+  user-select: none;
 }
 
 svg {
+  user-select: none;
   margin: 0 auto;
   width: 100%;
   height: 100%;
