--- a/src/effect/tree/css/index.css
+++ b/src/effect/tree/css/index.css
@@ -9,8 +9,14 @@ body {
   background: -moz-linear-gradient(top, #fff5f5, #ffecf0);
   background: linear-gradient(to top, #fff5f5, #ffecf0);
 }
+body * {
+  user-select: none;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
+}
 
 svg {
+  user-select: none;
   margin: 0 auto;
   width: 100%;
   height: 100%;
@@ -29,57 +35,17 @@ svg:first-of-type{
   position: absolute;
   z-index: 2;
 }
-.people{
-  width: 640px;
-  height: 480px;
-  position: absolute;
-  bottom: -410px;
-  z-index: 1;
-}
 
-.people path, .evn path:nth-of-type(2) {
-  stroke-dasharray: 1440;
-  stroke-dashoffset: 1440;
-  animation: dash 5s linear;
-  -webkit-animation: dash 5s linear;
-  animation-fill-mode: forwards;
-}
-
-.appearHeart {
+.appearHeartPath {
   stroke-dasharray: 190;
   stroke-dashoffset: 190;
   animation: dash 3s linear;
   -webkit-animation: dash 3s linear;
   animation-fill-mode: forwards;
-}
-
-.evn path:nth-of-type(1) {
   cursor: pointer;
 }
 
-
-.evn path:nth-of-type(3) {
-  stroke-dasharray: 226;
-  stroke-dashoffset: 226;
-  animation: dash 3s linear;
-  -webkit-animation: dash 3s linear;
-  animation-fill-mode: forwards;
-}
-.evn path:nth-of-type(4) {
-  stroke-dasharray: 400;
-  stroke-dashoffset: 400;
-  animation: dash 5s linear;
-  -webkit-animation: dash 5s linear;
-  animation-fill-mode: forwards;
-}
-
-@keyframes dash {
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-
-.disappearHeart {
+.disappearHeartPath {
   stroke-dasharray: 190;
   stroke-dashoffset: 0;
   animation: disappearHeartAni 3s linear;
@@ -90,5 +56,51 @@ svg:first-of-type{
   to {
     stroke-dasharray: 190;
     stroke-dashoffset: 190;
+  }
+}
+
+.people{
+  width: 640px;
+  height: 480px;
+  position: absolute;
+  bottom: -410px;
+  z-index: 1;
+}
+
+.groundPath {
+  stroke-dasharray: 1440;
+  stroke-dashoffset: 1440;
+  animation: dash 5s linear;
+  -webkit-animation: dash 5s linear;
+  animation-fill-mode: forwards;
+}
+.peoplePath{
+  stroke-dasharray: 550;
+  stroke-dashoffset: 550;
+  animation: dash 5s linear;
+  -webkit-animation: dash 5s linear;
+  animation-fill-mode: forwards;
+  z-index: 1;
+}
+
+.chairPath {
+  stroke-dasharray: 226;
+  stroke-dashoffset: 226;
+  animation: dash 3s linear;
+  -webkit-animation: dash 3s linear;
+  animation-fill-mode: forwards;
+  z-index: 2;
+}
+/* .evn path:nth-of-type(4) {
+  stroke-dasharray: 400;
+  stroke-dashoffset: 400;
+  animation: dash 5s linear;
+  -webkit-animation: dash 5s linear;
+  animation-fill-mode: forwards;
+} */
+
+@keyframes dash {
+  to {
+    stroke-dashoffset: 0;
   }
 }
