--- a/src/effect/tree/css/index.css
+++ b/src/effect/tree/css/index.css
@@ -1,5 +1,4 @@
-html,
-body {
+body, html {
   height: 100%;
   overflow: hidden;
   margin: 0;
@@ -7,12 +6,13 @@ body {
   background: -webkit-linear-gradient(top, #fff5f5, #ffecf0);
   background: -o-linear-gradient(top, #fff5f5, #ffecf0);
   background: -moz-linear-gradient(top, #fff5f5, #ffecf0);
-  background: linear-gradient(to top, #fff5f5, #ffecf0);
+  background: linear-gradient(to top, #fff5f5, #ffecf0)
 }
+
 body * {
   user-select: none;
-  -webkit-tap-highlight-color:rgba(0,0,0,0);
   -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent
 }
 
 svg {
@@ -20,20 +20,20 @@ svg {
   margin: 0 auto;
   width: 100%;
   height: 100%;
-  font-family: helvetica, sans-serif;
+  font-family: helvetica, sans-serif
 }
 
-path,
-line {
-  stroke: #777;
+line, path {
+  stroke: #777
 }
 
 .svgField {
-  height: 100%;
+  height: 100%
 }
-svg:first-of-type{
+
+svg:first-of-type {
   position: absolute;
-  z-index: 2;
+  z-index: 2
 }
 
 .appearHeartPath {
@@ -42,7 +42,7 @@ svg:first-of-type{
   animation: dash 3s linear;
   -webkit-animation: dash 3s linear;
   animation-fill-mode: forwards;
-  cursor: pointer;
+  cursor: pointer
 }
 
 .disappearHeartPath {
@@ -50,37 +50,48 @@ svg:first-of-type{
   stroke-dashoffset: 0;
   animation: disappearHeartAni 3s linear;
   -webkit-animation: disappearHeartAni 3s linear;
-  animation-fill-mode: forwards;
+  animation-fill-mode: forwards
 }
+
 @keyframes disappearHeartAni {
   to {
     stroke-dasharray: 190;
-    stroke-dashoffset: 190;
+    stroke-dashoffset: 190
   }
 }
 
-.people{
+.people {
   width: 640px;
   height: 480px;
   position: absolute;
   bottom: -410px;
-  z-index: 1;
+  z-index: 1
 }
 
 .groundPath {
-  stroke-dasharray: 1440;
-  stroke-dashoffset: 1440;
+  /* stroke-dasharray: 1440;
+  stroke-dashoffset: 1440; */
   animation: dash 5s linear;
   -webkit-animation: dash 5s linear;
-  animation-fill-mode: forwards;
+  animation-fill-mode: forwards
 }
-.peoplePath{
+.groundFill{
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  bottom: -1px;
+  display: none;
+  left: 0px;
+  background-color: #d4d4d4;
+}
+
+.peoplePath {
   stroke-dasharray: 550;
   stroke-dashoffset: 550;
   animation: dash 5s linear;
   -webkit-animation: dash 5s linear;
   animation-fill-mode: forwards;
-  z-index: 1;
+  z-index: 1
 }
 
 .chairPath {
@@ -89,18 +100,11 @@ svg:first-of-type{
   animation: dash 3s linear;
   -webkit-animation: dash 3s linear;
   animation-fill-mode: forwards;
-  z-index: 2;
+  z-index: 2
 }
-/* .evn path:nth-of-type(4) {
-  stroke-dasharray: 400;
-  stroke-dashoffset: 400;
-  animation: dash 5s linear;
-  -webkit-animation: dash 5s linear;
-  animation-fill-mode: forwards;
-} */
 
 @keyframes dash {
   to {
-    stroke-dashoffset: 0;
+    stroke-dashoffset: 0
   }
 }
