--- a/src/views/work/firstpaint/index.html
+++ b/src/views/work/firstpaint/index.html
@@ -79,7 +79,7 @@ javascript:(function(window){"use strict";window.timing=window.timing||{getTimes
 
 <p><img src="../../../images/work/firstpaint/h1.jpg" alt="图片8" title="" /></p>
 
-<p>该方式，还有另外一个好处，便是，你可以依此，搭建前端监控体系（<a href="../monitor/index.html">点击了解更多</a>）。</p>
+<p>该方式，还有另外一个好处，便是，你可以依此，搭建前端监控体系<!--（<a href="../monitor/index.html">点击了解更多</a>）-->。</p>
 
 <h2>第三方工具</h2>
 
