--- a/export/views/work/firstpaint/index.html
+++ b/export/views/work/firstpaint/index.html
@@ -55,7 +55,7 @@
 <p>大致数据展示如上，具体的操作就不详述了。</p>
 
 <ul>
-<li>如果是移动端的话，通过adb命令实现
+<li>如果是移动端的话，可以通过adb命令实现
 <ul><li>运行<code>adb shell screenrecord --bugreport /sdcard/lanch.mp4</code>命令进行录屏</li>
 <li>录制完毕，<code>ctrl+c</code>结束录屏</li>
 <li>运行<code>adb pull /sdcard/lanch.mp4 ./</code>，把其下载到本地</li>
