--- a/src/views/work/firstpaint/index.html
+++ b/src/views/work/firstpaint/index.html
@@ -61,7 +61,7 @@
 <p><img src="../../../images/work/firstpaint/f1.jpg" alt="图片6" title="" /></p>
 
 <ul>
-<li>很多时候你想测的是首次渲染耗时，那么可以先清除缓存数据，再进行上面所讲的操作。点击下图中红色箭头指向的按钮</li>
+<li>很多时候你想测的是首次加载耗时，那么可以先清除缓存数据，再进行上面所讲的操作。点击下图中红色箭头指向的按钮</li>
 </ul>
 
 <p><img src="../../../images/work/firstpaint/g1.jpg" alt="图片7" title="" /></p>
