--- a/export/views/work/firstpaint/index.html
+++ b/export/views/work/firstpaint/index.html
@@ -93,7 +93,7 @@
 <p><img src="../../../images/work/firstpaint/f1_47c822e3.jpg" alt="图片6" title="" /></p>
 
 <ul>
-<li>很多时候你想测的是首次渲染耗时，那么可以先清除缓存数据，再进行上面所讲的操作。点击下图中红色箭头指向的按钮</li>
+<li>很多时候你想测的是首次加载耗时，那么可以先清除缓存数据，再进行上面所讲的操作。点击下图中红色箭头指向的按钮</li>
 </ul>
 
 <p><img src="../../../images/work/firstpaint/g1_408145ce.jpg" alt="图片7" title="" /></p>
