--- a/export/views/work/my_time/index.html
+++ b/export/views/work/my_time/index.html
@@ -37,7 +37,7 @@
         <section id="main-content"><!--内容主体-->
           
           <h1>用flutter写了个番茄钟</h1>
-          <video src="../../../../resources/my_time.mp4" autoplay loop style="width: 300px;"></video>
+          <video controls="controls" src="../../../../resources/my_time.mp4" autoplay loop style="width: 300px;"></video>
           <p></p>
           相关技术点
           <ul>
